bpo-34247: Py_Initialize doesn't use environment variables to change sys.flags

This patch moves a number of startup options from the
_Py_CommandLineDetails to _PyCoreConfig to make it possible to process
them in Py_Initialize, actually uses this and adds a function to update
the relevant global variables from _Py_Initialize.